# tp_ccplusplus_2020

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  run.sh
linters/: run.sh
project/: CMakeLists.txt  CMakeLists.txt.in
project/include/: music.h  test.h
project/include/consistently/: character_series.h  character_series_c.h
project/include/parallel/: character_series_p.h
project/src/: main.c  music.c  test.c
project/src/consistently/: character_series.c  character_series_c.c
project/src/parallel/: character_series_p.c
project/tests/: CMakeLists.txt  test.cpp  test1.cpp  test2.cpp  tests.cpp
project/tests/data/: lib1  lib2  track_info  wrong_file_format2  wrong_file_format3
project/tests/result/logic_test/: test1  test3  test4
project/tests/test_data/: info  test0  test1  test2  test4
project/tests/tmp/create_track_library/: test2
project/tests/tmp/print_track_info/: test1
